--- a/css/cargastyles.css
+++ b/css/cargastyles.css
@@ -18,3 +18,12 @@ form{
     border-radius: 6px;
     border: 2px solid #0016b0;
 }
+
+button.botonaso{
+    color: red;
+}
+
+
+button.botonaso:hover{
+    color: green;
+}
